--- a/index.html
+++ b/index.html
@@ -23,16 +23,17 @@
         <div class="site-contacts">
           <ul class="site-contacts__list">
             <li class="site-contacts__item">
-              <a class="site-contacts__link">Email</a>
+              <a href="tel:+380939146068" class="site-contacts__link">
+                <svg width="30" height="30" class="site-contacts__icon">
+                  <use href="./images/icon/symbol-defs.svg#phone"></use></svg
+              ></a>
             </li>
             <li class="site-contacts__item">
-              <a class="site-contacts__link">Telegram</a>
-            </li>
-            <li class="site-contacts__item">
-              <a class="site-contacts__link">LinkedIn</a>
-            </li>
-            <li class="site-contacts__item">
-              <a class="site-contacts__link">GitHub</a>
+              <a href="mailto:koval3vita@gmail.com" class="site-contacts__link">
+                <svg width="30" height="30" class="site-contacts__icon">
+                  <use href="./images/icon/symbol-defs.svg#mail"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -46,6 +47,27 @@
             <p class="hero__text">
               Junior <span class="hero__text-acent">Full Stack Developer</span>
             </p>
+            <div class="hero__social">
+              <a
+                href="https://github.com/VitaKoval"
+                target="_blank"
+                class="hero__link"
+              >
+                <svg width="40" height="40" class="site-contacts__icon">
+                  <use href="./images/icon/symbol-defs.svg#github"></use>
+                </svg>
+              </a>
+              <a
+                href="#"
+                class="hero__link"
+                target="_blank"
+                class="hero__link>"
+              >
+                <svg width="40" height="40" class="site-contacts__icon">
+                  <use href="./images/icon/symbol-defs.svg#linkedIn"></use>
+                </svg>
+              </a>
+            </div>
           </div>
         </section>
       </div>
