--- a/index.html
+++ b/index.html
@@ -15,9 +15,17 @@
         >
         <nav class="site-nav">
           <ul class="site-nav__list">
-            <li class="site-nav__item"><a>Home</a></li>
-            <li class="site-nav__item"><a>About Me</a></li>
-            <li class="site-nav__item"><a>My Portfolio</a></li>
+            <li class="site-nav__item">
+              <a href="#home-srction" class="site-nav__link">Home</a>
+            </li>
+            <li class="site-nav__item">
+              <a href="#aboutMe-section" class="site-nav__link">About Me</a>
+            </li>
+            <li class="site-nav__item">
+              <a href="#portfolio-section" class="site-nav__link"
+                >My Portfolio</a
+              >
+            </li>
           </ul>
         </nav>
         <div class="site-contacts">
@@ -41,7 +49,7 @@
     </header>
     <main>
       <div class="intro" id="intro">
-        <section class="hero">
+        <section class="hero" id="home-srction">
           <div class="hero__group">
             <h1 class="hero__title">I'm Vita Koval</h1>
             <p class="hero__text">
@@ -58,7 +66,7 @@
                 </svg>
               </a>
               <a
-                href="#"
+                href="http://www.linkedin.com/in/vita-koval-dev"
                 class="hero__link"
                 target="_blank"
                 class="hero__link>"
@@ -71,8 +79,8 @@
           </div>
         </section>
       </div>
-      <div>About Me</div>
-      <div>My Project</div>
+      <div id="aboutMe-section">About Me</div>
+      <div id="portfolio-section">My Project</div>
     </main>
     <footer>FOOTER</footer>
     <script src="./js/vantaJs/three.min.js"></script>
