--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               </a>
             </li>
             <li class="site-contacts__item burger">
-              <a href="mailto:koval3vita@gmail.com" class="site-contacts__link">
+              <a href="#" class="site-contacts__link">
                 <svg width="30" height="30" class="site-contacts__icon">
                   <use href="./images/icon/symbol-defs.svg#menu"></use>
                 </svg>
