--- a/index.html
+++ b/index.html
@@ -86,7 +86,43 @@
           </div>
         </section>
       </div>
-      <div id="aboutMe-section">About Me</div>
+      <section id="aboutMe-section" class="aboutMe">
+        <div class="container">
+          <h2 class="visually-hidden">About Me</h2>
+          <div class="aboutMe__box">
+            <img
+              class="aboutMe__picture"
+              width="250"
+              src="https://st3.depositphotos.com/9998432/19046/v/600/depositphotos_190466518-stock-illustration-default-placeholder-businesswoman-half-length.jpg"
+              alt="Photo Vita"
+            />
+            <div>
+              <p class="aboutMe__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi,
+                vitae, autem tenetur rerum explicabo consequatur cupiditate et
+                veritatis tempora atque praesentium velit in exercitationem eum,
+                culpa modi quas repellendus expedita architecto id at qui natus
+                harum? Nostrum doloribus tenetur enim vero eligendi. Nulla eius,
+                magni neque iste dolorum beatae eum voluptatem, facere debitis
+                magnam, explicabo blanditiis ea cum quisquam aspernatur ipsam
+                doloribus dolores! Officia libero dolore quaerat, dolores animi
+                perferendis qui facere deleniti corrupti, ut, quam ipsa
+                voluptate tempore. Cum, molestiae veritatis eum natus, animi
+                adipisci odio fugiat repudiandae consequatur aliquid dolorum
+                dignissimos quo accusantium reiciendis reprehenderit numquam
+                magnam! Amet?
+              </p>
+              <a
+                href="https://drive.google.com/file/d/1366EHk3Jkuc4sqG_lXIOd9Cr0U1oszal/view?usp=sharing"
+                class="aboutMe__resumeLink"
+                target="_blank"
+                rel="noreferrer noopener"
+                >Resume</a
+              >
+            </div>
+          </div>
+        </div>
+      </section>
       <div id="portfolio-section">My Project</div>
     </main>
     <footer>FOOTER</footer>
