--- a/index.html
+++ b/index.html
@@ -123,6 +123,23 @@
           </div>
         </div>
       </section>
+      <section>
+        <div class="container column">
+          <h2>That I will study</h2>
+          <div class="stady__box">
+            <div class="stady__carousel">
+              <div class="stady__card stady__card--1">HTML</div>
+              <div class="stady__card stady__card--2">CSS</div>
+              <div class="stady__card stady__card--3">SASS</div>
+              <div class="stady__card stady__card--4">JS</div>
+              <div class="stady__card stady__card--5">GIT</div>
+              <div class="stady__card stady__card--6">REACT</div>
+              <div class="stady__card stady__card--7">REDUX</div>
+              <div class="stady__card stady__card--8">NODE.js</div>
+            </div>
+          </div>
+        </div>
+      </section>
       <div id="portfolio-section">My Project</div>
     </main>
     <footer>FOOTER</footer>
