--- a/index.html
+++ b/index.html
@@ -128,14 +128,23 @@
           <h2>That I will study</h2>
           <div class="stady__box">
             <div class="stady__carousel">
-              <div class="stady__card stady__card--1">HTML</div>
+              <!-- <div class="stady__card stady__card--1">HTML</div>
               <div class="stady__card stady__card--2">CSS</div>
               <div class="stady__card stady__card--3">SASS</div>
               <div class="stady__card stady__card--4">JS</div>
               <div class="stady__card stady__card--5">GIT</div>
               <div class="stady__card stady__card--6">REACT</div>
               <div class="stady__card stady__card--7">REDUX</div>
-              <div class="stady__card stady__card--8">NODE.js</div>
+              <div class="stady__card stady__card--8">NODE.js</div> -->
+              <div class="stady__card"></div>
+              <div class="stady__card"></div>
+              <div class="stady__card"></div>
+              <div class="stady__card"></div>
+              <div class="stady__card"></div>
+              <div class="stady__card"></div>
+              <div class="stady__card"></div>
+              <div class="stady__card"></div>
+              <div class="stady__card"></div>
             </div>
           </div>
         </div>
