--- a/index.html
+++ b/index.html
@@ -136,15 +136,48 @@
               <div class="stady__card stady__card--6">REACT</div>
               <div class="stady__card stady__card--7">REDUX</div>
               <div class="stady__card stady__card--8">NODE.js</div> -->
-              <div class="stady__card"></div>
-              <div class="stady__card"></div>
-              <div class="stady__card"></div>
-              <div class="stady__card"></div>
-              <div class="stady__card"></div>
-              <div class="stady__card"></div>
-              <div class="stady__card"></div>
-              <div class="stady__card"></div>
-              <div class="stady__card"></div>
+              <div class="stady__card">
+                <img class="stady__img" src="./images/stady-img/img_html.png" />
+              </div>
+              <div class="stady__card">
+                <img class="stady__img" src="./images/stady-img/img_css.png" />
+              </div>
+              <div class="stady__card">
+                <img class="stady__img" src="./images/stady-img/img_js.png" />
+              </div>
+              <div class="stady__card">
+                <img class="stady__img" src="./images/stady-img/img_npm.png" />
+              </div>
+              <div class="stady__card">
+                <img
+                  class="stady__img"
+                  src="./images/stady-img/img_react.png"
+                />
+              </div>
+              <div class="stady__card">
+                <img
+                  class="stady__img"
+                  src="./images/stady-img/img_nodejs.png"
+                />
+              </div>
+              <div class="stady__card">
+                <img
+                  class="stady__img"
+                  src="./images/stady-img/img_mongoDB.png"
+                />
+              </div>
+              <div class="stady__card">
+                <img
+                  class="stady__img"
+                  src="./images/stady-img/img_github.png"
+                />
+              </div>
+              <div class="stady__card">
+                <img
+                  class="stady__img"
+                  src="./images/stady-img/img_mongoose.png"
+                />
+              </div>
             </div>
           </div>
         </div>
