--- a/index.html
+++ b/index.html
@@ -138,9 +138,14 @@
               <div class="stady__card stady__card--8">NODE.js</div> -->
               <div class="stady__card">
                 <img class="stady__img" src="./images/stady-img/img_html.png" />
+                <img class="stady__img" src="./images/stady-img/img_css.png" />
               </div>
               <div class="stady__card">
-                <img class="stady__img" src="./images/stady-img/img_css.png" />
+                <img
+                  class="stady__img"
+                  src="./images/stady-img/img_axios.png"
+                />
+                <img class="stady__img" src="./images/stady-img/img_crud.png" />
               </div>
               <div class="stady__card">
                 <img class="stady__img" src="./images/stady-img/img_js.png" />
@@ -152,6 +157,10 @@
                 <img
                   class="stady__img"
                   src="./images/stady-img/img_react.png"
+                />
+                <img
+                  class="stady__img"
+                  src="./images/stady-img/img_redux.png"
                 />
               </div>
               <div class="stady__card">
