--- a/index.html
+++ b/index.html
@@ -123,29 +123,16 @@
           </div>
         </div>
       </section>
-      <section>
+      <section class="section-stady">
         <div class="container column">
           <h2>That I will study</h2>
           <div class="stady__box">
             <div class="stady__carousel">
-              <!-- <div class="stady__card stady__card--1">HTML</div>
-              <div class="stady__card stady__card--2">CSS</div>
-              <div class="stady__card stady__card--3">SASS</div>
-              <div class="stady__card stady__card--4">JS</div>
-              <div class="stady__card stady__card--5">GIT</div>
-              <div class="stady__card stady__card--6">REACT</div>
-              <div class="stady__card stady__card--7">REDUX</div>
-              <div class="stady__card stady__card--8">NODE.js</div> -->
               <div class="stady__card">
                 <img class="stady__img" src="./images/stady-img/img_html.png" />
-                <img class="stady__img" src="./images/stady-img/img_css.png" />
               </div>
               <div class="stady__card">
-                <img
-                  class="stady__img"
-                  src="./images/stady-img/img_axios.png"
-                />
-                <img class="stady__img" src="./images/stady-img/img_crud.png" />
+                <img class="stady__img" src="./images/stady-img/img_css.png" />
               </div>
               <div class="stady__card">
                 <img class="stady__img" src="./images/stady-img/img_js.png" />
@@ -158,6 +145,8 @@
                   class="stady__img"
                   src="./images/stady-img/img_react.png"
                 />
+              </div>
+              <div class="stady__card">
                 <img
                   class="stady__img"
                   src="./images/stady-img/img_redux.png"
@@ -181,6 +170,28 @@
                   src="./images/stady-img/img_github.png"
                 />
               </div>
+
+              <div class="stady__card">
+                <img
+                  class="stady__img"
+                  src="./images/stady-img/img_axios.png"
+                />
+              </div>
+              <div class="stady__card">
+                <img class="stady__img" src="./images/stady-img/mg_sass.png" />
+              </div>
+              <div class="stady__card">
+                <img
+                  class="stady__img"
+                  src="./images/stady-img/styled-components.png"
+                />
+              </div>
+              <div class="stady__card">
+                <img
+                  class="stady__img"
+                  src="./images/stady-img/mui-logo-56F171E991-seeklogo.com.png"
+                />
+              </div>
               <div class="stady__card">
                 <img
                   class="stady__img"
@@ -191,9 +202,98 @@
           </div>
         </div>
       </section>
-      <div id="portfolio-section">My Project</div>
+      <div id="portfolio-section" class="portfolio-section">
+        <div class="container">
+          <ul class="portfolio__list">
+            <li class="portfolio__item">
+              <div class="portfolio__box">
+                <div class="portfolio__tumb-img">
+                  <img
+                    class="portfolio__img"
+                    src="./images/project/movies.png"
+                  />
+                </div>
+                <div class="portfolio__min-info">
+                  <h3 class="portfolio__title">gvghvhjs cbs</h3>
+                  <p class="portfolio__description">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Necessitatibus, illum.
+                  </p>
+                  <button type="button" class="portfolio__button">
+                    More
+                    <span class="arrow one"
+                      ><img src="./images/icon/icon_chevron_down.svg" />
+                    </span>
+                    <span class="arrow two"
+                      ><img
+                        class="arrow_img"
+                        src="./images/icon/icon_chevron_down.svg"
+                      />
+                    </span>
+                  </button>
+                </div>
+              </div>
+              <div class="portfolio__max-info">
+                картка з більшою інформацією
+              </div>
+            </li>
+            <li class="portfolio__item">
+              <div class="portfolio__box">
+                <div class="portfolio__tumb-img">
+                  <img
+                    class="portfolio__img"
+                    src="./images/stady-img/img_mongoose.png"
+                  />
+                </div>
+                <div class="portfolio__min-info">
+                  <h3 class="portfolio__title">gvghvhjs cbs</h3>
+                  <p class="portfolio__description">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Necessitatibus, illum.
+                  </p>
+                </div>
+              </div>
+              <div class="portfolio__max-info">
+                картка з більшою інформацією
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
     </main>
-    <footer>FOOTER</footer>
+    <footer class="page-footer">
+      <div class="container footer">
+        <h3 class="page-footer__title">Stay connected</h3>
+        <p class="page-footer__text">leave to contact me in a convenient way</p>
+        <ul class="social-list">
+          <li class="social-item">
+            <a href="#" class="social-item__link">
+              <svg width="30" height="30" class="social-item__icon">
+                <use href="./images/icon/symbol-defs.svg#telegram"></use></svg
+            ></a>
+          </li>
+          <li class="social-item">
+            <a href="#" class="social-item__link">
+              <svg width="30" height="30" class="social-item__icon">
+                <use href="./images/icon/symbol-defs.svg#linkedIn"></use></svg
+            ></a>
+          </li>
+          <li class="social-item">
+            <a href="#" class="social-item__link">
+              <svg width="30" height="30" class="social-item__icon">
+                <use href="./images/icon/symbol-defs.svg#phone"></use></svg
+            ></a>
+          </li>
+          <li class="social-item">
+            <a href="#" class="social-item__link">
+              <svg width="30" height="30" class="social-item__icon">
+                <use href="./images/icon/symbol-defs.svg#mail"></use></svg
+            ></a>
+          </li>
+        </ul>
+      </div>
+    </footer>
+    <script src="./js/clickMore.js"></script>
     <script src="./js/vantaJs/three.min.js"></script>
     <script src="./js/vantaJs/vanta.net.min.js"></script>
     <script src="./js/vantaJs/app.js"></script>
