add card project

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vita Developer</title>
+    <link rel="icon shortcut" href="./images/icon/dev.png" type="image" />
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
@@ -214,11 +215,16 @@
                   />
                 </div>
                 <div class="portfolio__min-info">
-                  <h3 class="portfolio__title">gvghvhjs cbs</h3>
+                  <h3 class="portfolio__title">MOVIE</h3>
+                  <span class="warning">Зараз проект в розробці...</span>
                   <p class="portfolio__description">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Necessitatibus, illum.
+                    Сайт для пошуку і перегляду трейлерів до найпопулярніших
+                    фільмів. <br />
+                    Використовую: HTML, JS, React, Emotion, AXIOS, API,
+                    Framer-motion <br />
+                    API: TMDB
                   </p>
+
                   <button type="button" class="portfolio__button">
                     More
                     <span class="arrow one"
