fixed button more

--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
                     API: TMDB
                   </p>
 
-                  <button type="button" class="portfolio__button">
-                    More
+                  <button type="button" class="portfolio__button">More</button>
+                  <div class="arrow-group">
                     <span class="arrow one"
                       ><img src="./images/icon/icon_chevron_down.svg" />
                     </span>
@@ -236,7 +236,7 @@
                         src="./images/icon/icon_chevron_down.svg"
                       />
                     </span>
-                  </button>
+                  </div>
                 </div>
               </div>
               <div class="portfolio__max-info">
