--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 target="_blank"
                 class="hero__link"
               >
-                <svg width="40" height="40" class="site-contacts__icon">
+                <svg width="50" height="50" class="site-contacts__icon">
                   <use href="./images/icon/symbol-defs.svg#github"></use>
                 </svg>
               </a>
@@ -79,7 +79,7 @@
                 target="_blank"
                 class="hero__link>"
               >
-                <svg width="40" height="40" class="site-contacts__icon">
+                <svg width="50" height="50" class="site-contacts__icon">
                   <use href="./images/icon/symbol-defs.svg#linkedIn"></use>
                 </svg>
               </a>
@@ -215,17 +215,18 @@
                   />
                 </div>
                 <div class="portfolio__min-info">
+                  <span class="portfolio__status">Pet-project</span>
                   <h3 class="portfolio__title">MOVIE</h3>
                   <span class="warning">Зараз проект в розробці...</span>
                   <p class="portfolio__description">
-                    Сайт для пошуку і перегляду трейлерів до найпопулярніших
-                    фільмів. <br />
+                    Сайт для пошуку і перегляду трейлерів до фільмів. <br />
                     Використовую: HTML, JS, React, Emotion, AXIOS, API,
                     Framer-motion <br />
                     API: TMDB
                   </p>
 
                   <button type="button" class="portfolio__button">More</button>
+                  <div class="button__element"></div>
                   <div class="arrow-group">
                     <span class="arrow one"
                       ><img src="./images/icon/icon_chevron_down.svg" />
