--- a/index.html
+++ b/index.html
@@ -98,28 +98,76 @@
               alt="Photo Vita"
             />
             <div>
-              <p class="aboutMe__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi,
-                vitae, autem tenetur rerum explicabo consequatur cupiditate et
-                veritatis tempora atque praesentium velit in exercitationem eum,
-                culpa modi quas repellendus expedita architecto id at qui natus
-                harum? Nostrum doloribus tenetur enim vero eligendi. Nulla eius,
-                magni neque iste dolorum beatae eum voluptatem, facere debitis
-                magnam, explicabo blanditiis ea cum quisquam aspernatur ipsam
-                doloribus dolores! Officia libero dolore quaerat, dolores animi
-                perferendis qui facere deleniti corrupti, ut, quam ipsa
-                voluptate tempore. Cum, molestiae veritatis eum natus, animi
-                adipisci odio fugiat repudiandae consequatur aliquid dolorum
-                dignissimos quo accusantium reiciendis reprehenderit numquam
-                magnam! Amet?
-              </p>
-              <a
+              <div class="aboutMe__text">
+                <p>
+                  Привіт! Мене звати Віта і я нарешті наблизилась до своєї мрії
+                  - стати Full-stack Developer.
+                </p>
+                <p>
+                  Мій шлях до розробки був довгим але головне, який бекграунд
+                  він мені залишив!
+                </p>
+                <p>
+                  Почалося все з Магістра Банківської справи і роботи по
+                  спеціальності 9 років поспіль. Так, фінансовий аналіз
+                  підприємст від маленьких до гігантських мене запалював.
+                </p>
+                <p>
+                  Успішно пройшовшла шлях від звічайного спеціаліста до
+                  керівника відділу кредитування юридичних осіб. Пишаюсь цим!
+                  Мені було цікаво!
+                </p>
+                <p>
+                  Але у якийсь момент я зрозуміла, що розвитку для мене більше
+                  немає, я не бачила шляху далі у цій сфері.
+                </p>
+                <p>
+                  Тому, я вирішила відкрити власну справу та стала
+                  співзасновником Костюмерної. Тут, в основному, займалась
+                  організацією процесів - від фінансових до набору персоналу.
+                </p>
+                <p>
+                  У цій справі мене також запалювали нові можливості, нові
+                  занння, збільшення прибутку, розширення. За 5 років роботи
+                  вдалося збільшити прибуток в 4 рази, розширити площу
+                  костюмерної з 10 кв.м. до 100 кв.м.
+                </p>
+                <p>
+                  Коли ми почали планувати відкриття філії почалася епідемія
+                  COVID. Довелося прийняти болюче рішення про закриття цього
+                  проєкту.
+                </p>
+                <p>
+                  Але увесь цей час я мріяла про розробку! В обох напрямках я
+                  намагалась створити програмки для автоматизації рутинних
+                  процесів. У банківській сфері - це були форми з автоматичним
+                  підрахунком різноманітних фінансових показників. У власній
+                  справі - створила програмку на базі Макросів Excel для швикого
+                  заповнення форм видачі замовлення та інвертаризації.
+                </p>
+                <p>
+                  Тому, коли зʼявився час на навчання я відразу ринулась у
+                  вивчення сфери IT (мов, напрямків). Почала із самостійного
+                  вивчення основ - мене дуже захопило це, але зрозуміла, що то
+                  буде дуже довго! Треба курси! Сказано - зроблено (дякуючи
+                  підтримці рідних).
+                </p>
+                <p>
+                  Знайшла навчальні курси у Bootcamp-форматі (24 години на добу,
+                  7 днів на тиждень) і мене вирвало із буденного життя.
+                </p>
+                <p>
+                  І ось я тут! На своєму сайті, зробленому самотужки і з
+                  портфоліо, яке я постійно поповнюю!
+                </p>
+              </div>
+              <!-- <a
                 href="https://drive.google.com/file/d/1366EHk3Jkuc4sqG_lXIOd9Cr0U1oszal/view?usp=sharing"
                 class="aboutMe__resumeLink"
                 target="_blank"
                 rel="noreferrer noopener"
                 >Resume</a
-              >
+              > -->
             </div>
           </div>
         </div>
@@ -131,73 +179,132 @@
             <div class="stady__carousel">
               <div class="stady__card">
                 <img class="stady__img" src="./images/stady-img/img_html.png" />
+                <span class="stady__img-shadow"></span>
               </div>
               <div class="stady__card">
-                <img class="stady__img" src="./images/stady-img/img_css.png" />
+                <div class="card__box">
+                  <img
+                    class="stady__img"
+                    src="./images/stady-img/img_css.png"
+                  />
+                </div>
+                <span class="stady__img-shadow"></span>
               </div>
               <div class="stady__card">
-                <img class="stady__img" src="./images/stady-img/img_js.png" />
+                <div class="card__box">
+                  <img class="stady__img" src="./images/stady-img/img_js.png" />
+                </div>
+
+                <span class="stady__img-shadow"></span>
               </div>
               <div class="stady__card">
-                <img class="stady__img" src="./images/stady-img/img_npm.png" />
+                <div class="card__box">
+                  <img
+                    class="stady__img"
+                    src="./images/stady-img/img_npm.png"
+                  />
+                </div>
+
+                <span class="stady__img-shadow"></span>
               </div>
               <div class="stady__card">
-                <img
-                  class="stady__img"
-                  src="./images/stady-img/img_react.png"
-                />
+                <div class="card__box">
+                  <img
+                    class="stady__img"
+                    src="./images/stady-img/img_react.png"
+                  />
+                </div>
+
+                <span class="stady__img-shadow"></span>
               </div>
               <div class="stady__card">
-                <img
-                  class="stady__img"
-                  src="./images/stady-img/img_redux.png"
-                />
+                <div class="card__box">
+                  <img
+                    class="stady__img"
+                    src="./images/stady-img/img_redux.png"
+                  />
+                </div>
+
+                <span class="stady__img-shadow"></span>
               </div>
               <div class="stady__card">
-                <img
-                  class="stady__img"
-                  src="./images/stady-img/img_nodejs.png"
-                />
+                <div class="card__box">
+                  <img
+                    class="stady__img"
+                    src="./images/stady-img/img_nodejs.png"
+                  />
+                </div>
+
+                <span class="stady__img-shadow"></span>
               </div>
               <div class="stady__card">
-                <img
-                  class="stady__img"
-                  src="./images/stady-img/img_mongoDB.png"
-                />
+                <div class="card__box">
+                  <img
+                    class="stady__img"
+                    src="./images/stady-img/img_mongoDB.png"
+                  />
+                </div>
+                <span class="stady__img-shadow"></span>
               </div>
               <div class="stady__card">
-                <img
-                  class="stady__img"
-                  src="./images/stady-img/img_github.png"
-                />
+                <div class="card__box">
+                  <img
+                    class="stady__img"
+                    src="./images/stady-img/img_github.png"
+                  />
+                </div>
+
+                <span class="stady__img-shadow"></span>
               </div>
 
               <div class="stady__card">
-                <img
-                  class="stady__img"
-                  src="./images/stady-img/img_axios.png"
-                />
+                <div class="card__box">
+                  <img
+                    class="stady__img"
+                    src="./images/stady-img/img_axios.png"
+                  />
+                </div>
+
+                <span class="stady__img-shadow"></span>
               </div>
               <div class="stady__card">
-                <img class="stady__img" src="./images/stady-img/mg_sass.png" />
+                <div class="card__box">
+                  <img
+                    class="stady__img"
+                    src="./images/stady-img/mg_sass.png"
+                  />
+                </div>
+
+                <span class="stady__img-shadow"></span>
               </div>
               <div class="stady__card">
-                <img
-                  class="stady__img"
-                  src="./images/stady-img/styled-components.png"
-                />
+                <div class="card__box">
+                  <img
+                    class="stady__img"
+                    src="./images/stady-img/styled-components.png"
+                  />
+                </div>
+
+                <span class="stady__img-shadow"></span>
               </div>
               <div class="stady__card">
-                <img
-                  class="stady__img"
-                  src="./images/stady-img/mui-logo-56F171E991-seeklogo.com.png"
-                />
+                <div class="card__box">
+                  <img
+                    class="stady__img"
+                    src="./images/stady-img/mui-logo-56F171E991-seeklogo.com.png"
+                  />
+                </div>
+
+                <span class="stady__img-shadow"></span>
               </div>
               <div class="stady__card">
-                <img
-                  class="stady__img"
-                  src="./images/stady-img/img_mongoose.png"
-                />
+                <div class="card__box">
+                  <img
+                    class="stady__img"
+                    src="./images/stady-img/img_mongoose.png"
+                  />
+                </div>
+                <span class="stady__img-shadow"></span>
               </div>
             </div>
           </div>
@@ -208,12 +315,20 @@
           <ul class="portfolio__list">
             <li class="portfolio__item">
               <div class="portfolio__box">
-                <div class="portfolio__tumb-img">
+                <!-- <div class="portfolio__tumb-img"> -->
+                <a
+                  href="https://vitakoval.github.io/movies-react/"
+                  class="portfolio__link"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                >
+                  <span class="portfolio__link-play"> </span>
                   <img
                     class="portfolio__img"
                     src="./images/project/movies.png"
                   />
-                </div>
+                </a>
+                <!-- </div> -->
                 <div class="portfolio__min-info">
                   <span class="portfolio__status">Pet-project</span>
                   <h3 class="portfolio__title">MOVIE</h3>
