--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
                 <div class="card__box">
                   <img
                     class="stady__img"
+                    style="height: 100px"
                     src="./images/stady-img/img_mongoDB.png"
                   />
                 </div>
