--- a/index.html
+++ b/index.html
@@ -94,50 +94,49 @@
             <img
               class="aboutMe__picture"
               width="250"
-              src="https://st3.depositphotos.com/9998432/19046/v/600/depositphotos_190466518-stock-illustration-default-placeholder-businesswoman-half-length.jpg"
+              src="https://slovotvir.org.ua/slovo/fotohrafiia.png"
               alt="Photo Vita"
             />
             <div>
               <div class="aboutMe__text">
-                <p>
+                <p class="aboutMe__card">
                   Привіт! Мене звати Віта і я нарешті наблизилась до своєї мрії
-                  - стати Full-stack Developer.
-                </p>
-                <p>
+                  - стати Full-stack Developer. <br />
+
                   Мій шлях до розробки був довгим але головне, який бекграунд
                   він мені залишив!
                 </p>
-                <p>
+                <p class="aboutMe__card">
                   Почалося все з Магістра Банківської справи і роботи по
                   спеціальності 9 років поспіль. Так, фінансовий аналіз
                   підприємст від маленьких до гігантських мене запалював.
                 </p>
-                <p>
+                <p class="aboutMe__card">
                   Успішно пройшовшла шлях від звічайного спеціаліста до
                   керівника відділу кредитування юридичних осіб. Пишаюсь цим!
                   Мені було цікаво!
                 </p>
-                <p>
+                <p class="aboutMe__card">
                   Але у якийсь момент я зрозуміла, що розвитку для мене більше
                   немає, я не бачила шляху далі у цій сфері.
                 </p>
-                <p>
+                <p class="aboutMe__card">
                   Тому, я вирішила відкрити власну справу та стала
                   співзасновником Костюмерної. Тут, в основному, займалась
                   організацією процесів - від фінансових до набору персоналу.
                 </p>
-                <p>
+                <p class="aboutMe__card">
                   У цій справі мене також запалювали нові можливості, нові
                   занння, збільшення прибутку, розширення. За 5 років роботи
                   вдалося збільшити прибуток в 4 рази, розширити площу
                   костюмерної з 10 кв.м. до 100 кв.м.
                 </p>
-                <p>
+                <p class="aboutMe__card">
                   Коли ми почали планувати відкриття філії почалася епідемія
                   COVID. Довелося прийняти болюче рішення про закриття цього
                   проєкту.
                 </p>
-                <p>
+                <p class="aboutMe__card">
                   Але увесь цей час я мріяла про розробку! В обох напрямках я
                   намагалась створити програмки для автоматизації рутинних
                   процесів. У банківській сфері - це були форми з автоматичним
@@ -145,18 +144,18 @@
                   справі - створила програмку на базі Макросів Excel для швикого
                   заповнення форм видачі замовлення та інвертаризації.
                 </p>
-                <p>
+                <p class="aboutMe__card">
                   Тому, коли зʼявився час на навчання я відразу ринулась у
                   вивчення сфери IT (мов, напрямків). Почала із самостійного
                   вивчення основ - мене дуже захопило це, але зрозуміла, що то
                   буде дуже довго! Треба курси! Сказано - зроблено (дякуючи
                   підтримці рідних).
                 </p>
-                <p>
+                <p class="aboutMe__card">
                   Знайшла навчальні курси у Bootcamp-форматі (24 години на добу,
                   7 днів на тиждень) і мене вирвало із буденного життя.
                 </p>
-                <p>
+                <p class="aboutMe__card">
                   І ось я тут! На своєму сайті, зробленому самотужки і з
                   портфоліо, яке я постійно поповнюю!
                 </p>
@@ -420,5 +419,6 @@
     <script src="./js/vantaJs/three.min.js"></script>
     <script src="./js/vantaJs/vanta.net.min.js"></script>
     <script src="./js/vantaJs/app.js"></script>
+    <script src="./js/navActive.js"></script>
   </body>
 </html>
