--- a/index.html
+++ b/index.html
@@ -361,18 +361,46 @@
             </li>
             <li class="portfolio__item">
               <div class="portfolio__box">
-                <div class="portfolio__tumb-img">
+                <!-- <div class="portfolio__tumb-img"> -->
+                <a
+                  href="https://vitakoval.github.io/BOOKS-READING"
+                  class="portfolio__link"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                >
+                  <span class="portfolio__link-play"> </span>
                   <img
                     class="portfolio__img"
-                    src="./images/stady-img/img_mongoose.png"
+                    src="./images/project/booksReading.png"
                   />
-                </div>
+                </a>
+                <!-- </div> -->
                 <div class="portfolio__min-info">
-                  <h3 class="portfolio__title">gvghvhjs cbs</h3>
+                  <span class="portfolio__status">Team-project</span>
+                  <h3 class="portfolio__title">BOOKS-READING</h3>
+                  <!-- <span class="warning">Зараз проект в розробці...</span> -->
                   <p class="portfolio__description">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Necessitatibus, illum.
+                    Додаток-мотиватор по читанню книг. Тут ставиш ціль і
+                    слідкуєшь за прогресом. <br />
+                    Використовую: React, Redux, Redux-persist, JS, MUI,
+                    Styled-components, AXIOS, API, Chart.js <br />
+                    <span class="portfolio__description-active"
+                      >Роль: Team Lead</span
+                    >
                   </p>
+                  <button type="button" class="portfolio__button">More</button>
+                  <div class="button__element"></div>
+                  <div class="arrow-group">
+                    <span class="arrow one"
+                      ><img src="./images/icon/icon_chevron_down.svg" />
+                    </span>
+                    <span class="arrow two"
+                      ><img
+                        class="arrow_img"
+                        src="./images/icon/icon_chevron_down.svg"
+                      />
+                    </span>
+                  </div>
                 </div>
               </div>
               <div class="portfolio__max-info">
