project fix img

--- a/index.html
+++ b/index.html
@@ -315,20 +315,20 @@
           <ul class="portfolio__list">
             <li class="portfolio__item">
               <div class="portfolio__box">
-                <!-- <div class="portfolio__tumb-img"> -->
-                <a
-                  href="https://vitakoval.github.io/movies-react/"
-                  class="portfolio__link"
-                  target="_blank"
-                  rel="noreferrer noopener"
-                >
-                  <span class="portfolio__link-play"> </span>
-                  <img
-                    class="portfolio__img"
-                    src="./images/project/movies.png"
-                  />
-                </a>
-                <!-- </div> -->
+                <div class="portfolio__tumb-img">
+                  <a
+                    href="https://vitakoval.github.io/movies-react/"
+                    class="portfolio__link"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                  >
+                    <span class="portfolio__link-play"> </span>
+                    <img
+                      class="portfolio__img"
+                      src="./images/project/movies.png"
+                    />
+                  </a>
+                </div>
                 <div class="portfolio__min-info">
                   <span class="portfolio__status">Pet-project</span>
                   <h3 class="portfolio__title">MOVIE</h3>
@@ -361,20 +361,20 @@
             </li>
             <li class="portfolio__item">
               <div class="portfolio__box">
-                <!-- <div class="portfolio__tumb-img"> -->
-                <a
-                  href="https://vitakoval.github.io/BOOKS-READING"
-                  class="portfolio__link"
-                  target="_blank"
-                  rel="noreferrer noopener"
-                >
-                  <span class="portfolio__link-play"> </span>
-                  <img
-                    class="portfolio__img"
-                    src="./images/project/booksReading.png"
-                  />
-                </a>
-                <!-- </div> -->
+                <div class="portfolio__tumb-img">
+                  <a
+                    href="https://vitakoval.github.io/BOOKS-READING"
+                    class="portfolio__link"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                  >
+                    <span class="portfolio__link-play"> </span>
+                    <img
+                      class="portfolio__img"
+                      src="./images/project/booksReading.png"
+                    />
+                  </a>
+                </div>
                 <div class="portfolio__min-info">
                   <span class="portfolio__status">Team-project</span>
                   <h3 class="portfolio__title">BOOKS-READING</h3>
@@ -384,6 +384,145 @@
                     слідкуєшь за прогресом. <br />
                     Використовую: React, Redux, Redux-persist, JS, MUI,
                     Styled-components, AXIOS, API, Chart.js <br />
+                    <span class="portfolio__description-active"
+                      >Роль: Team Lead</span
+                    >
+                  </p>
+                  <button type="button" class="portfolio__button">More</button>
+                  <div class="button__element"></div>
+                  <div class="arrow-group">
+                    <span class="arrow one"
+                      ><img src="./images/icon/icon_chevron_down.svg" />
+                    </span>
+                    <span class="arrow two"
+                      ><img
+                        class="arrow_img"
+                        src="./images/icon/icon_chevron_down.svg"
+                      />
+                    </span>
+                  </div>
+                </div>
+              </div>
+              <div class="portfolio__max-info">
+                картка з більшою інформацією
+              </div>
+            </li>
+            <li class="portfolio__item">
+              <div class="portfolio__box">
+                <div class="portfolio__tumb-img">
+                  <a
+                    href="https://vitakoval.github.io/phonebook/"
+                    class="portfolio__link"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                  >
+                    <span class="portfolio__link-play"> </span>
+                    <img
+                      class="portfolio__img"
+                      src="./images/project/phoneBook.png"
+                    />
+                  </a>
+                </div>
+                <div class="portfolio__min-info">
+                  <span class="portfolio__status">Pet-project</span>
+                  <h3 class="portfolio__title">phonebook</h3>
+                  <p class="portfolio__description">
+                    Додаток телефонної книги. Реєструйся та додавай, змінюй,
+                    видаляй контакти. <br />
+                    Використовую: React, Redux, Emotion, MUI, AXIOS, API<br />
+                  </p>
+
+                  <button type="button" class="portfolio__button">More</button>
+                  <div class="button__element"></div>
+                  <div class="arrow-group">
+                    <span class="arrow one"
+                      ><img src="./images/icon/icon_chevron_down.svg" />
+                    </span>
+                    <span class="arrow two"
+                      ><img
+                        class="arrow_img"
+                        src="./images/icon/icon_chevron_down.svg"
+                      />
+                    </span>
+                  </div>
+                </div>
+              </div>
+              <div class="portfolio__max-info">
+                картка з більшою інформацією
+              </div>
+            </li>
+            <li class="portfolio__item">
+              <div class="portfolio__box">
+                <div class="portfolio__tumb-img">
+                  <a
+                    href="https://vitakoval.github.io/images/"
+                    class="portfolio__link"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                  >
+                    <span class="portfolio__link-play"> </span>
+                    <img
+                      class="portfolio__img"
+                      src="./images/project/imagesSearch.png"
+                    />
+                  </a>
+                </div>
+                <div class="portfolio__min-info">
+                  <span class="portfolio__status">Pet-project</span>
+                  <h3 class="portfolio__title">Search images</h3>
+                  <p class="portfolio__description">
+                    Додаток з пошуку картинок по ключовому слову з пагінацією<br />
+                    Використовую: React, Emotion, MUI, AXIOS, API<br />
+                    API:
+                    <a href="https://pixabay.com/api/docs/" target="_blank"
+                      >Pixabay</a
+                    >
+                  </p>
+
+                  <button type="button" class="portfolio__button">More</button>
+                  <div class="button__element"></div>
+                  <div class="arrow-group">
+                    <span class="arrow one"
+                      ><img src="./images/icon/icon_chevron_down.svg" />
+                    </span>
+                    <span class="arrow two"
+                      ><img
+                        class="arrow_img"
+                        src="./images/icon/icon_chevron_down.svg"
+                      />
+                    </span>
+                  </div>
+                </div>
+              </div>
+              <div class="portfolio__max-info">
+                картка з більшою інформацією
+              </div>
+            </li>
+            <li class="portfolio__item">
+              <div class="portfolio__box">
+                <div class="portfolio__tumb-img">
+                  <a
+                    href="https://vitakoval.github.io/iceCream/"
+                    class="portfolio__link"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                  >
+                    <span class="portfolio__link-play"> </span>
+                    <img
+                      class="portfolio__img"
+                      src="./images/project/iceCream.png"
+                    />
+                  </a>
+                </div>
+                <div class="portfolio__min-info">
+                  <span class="portfolio__status">Team-project</span>
+                  <h3 class="portfolio__title">ice cream</h3>
+                  <!-- <span class="warning">Зараз проект в розробці...</span> -->
+                  <p class="portfolio__description">
+                    Сайт-лендінг для ознайомлення з продукцією. Виконано по
+                    методу mobile-first адаптивна верстка з 3 точками перелому,
+                    а також з купою можливостей CSS. <br />
+                    Використовую: HTML, CSS, SASS, JS, Parcel<br />
                     <span class="portfolio__description-active"
                       >Роль: Team Lead</span
                     >
