--- a/index.html
+++ b/index.html
@@ -337,7 +337,13 @@
                     Сайт для пошуку і перегляду трейлерів до фільмів. <br />
                     Використовую: HTML, JS, React, Emotion, AXIOS, API,
                     Framer-motion <br />
-                    API: TMDB
+                    API:
+                    <a
+                      href="https://www.themoviedb.org/documentation/api"
+                      target="_blank"
+                      class="portfolio__link-api"
+                      >TMDB<span class="portfolio__link-play--mini"></span>
+                    </a>
                   </p>
 
                   <button type="button" class="portfolio__button">More</button>
@@ -428,7 +434,7 @@
                   <h3 class="portfolio__title">phonebook</h3>
                   <p class="portfolio__description">
                     Додаток телефонної книги. Реєструйся та додавай, змінюй,
-                    видаляй контакти. <br />
+                    видаляй контакти. Додано пошук по імені. <br />
                     Використовую: React, Redux, Emotion, MUI, AXIOS, API<br />
                   </p>
 
@@ -474,9 +480,12 @@
                     Додаток з пошуку картинок по ключовому слову з пагінацією<br />
                     Використовую: React, Emotion, MUI, AXIOS, API<br />
                     API:
-                    <a href="https://pixabay.com/api/docs/" target="_blank"
-                      >Pixabay</a
-                    >
+                    <a
+                      href="https://pixabay.com/api/docs/"
+                      target="_blank"
+                      class="portfolio__link-api"
+                      >Pixabay<span class="portfolio__link-play--mini"></span>
+                    </a>
                   </p>
 
                   <button type="button" class="portfolio__button">More</button>
