--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <img
               class="aboutMe__picture"
               width="250"
-              src="https://slovotvir.org.ua/slovo/fotohrafiia.png"
+              src="./images/iam_or.jpg"
               alt="Photo Vita"
             />
             <div>
